[package]
name = "sniffer"
version = "0.1.0"
edition = "2021"
authors = [
    "Aloïs Rautureau <alois.rautureau@ens-rennes.fr",
    "Paul Adam <paul.adam@ens-rennes.fr",
    "Romain De Beaucorps <romain.de-beaucorps@ens-rennes.fr"
]

[profile.release]
debug=true

[dependencies]
logos = "0.12.0"
nom = "7.1.3"
logos-nom-bridge = "0.1.0"
rustyline = "11.0.0"
itertools = "0.10.5"
ptree = "0.4.0"
rustc-hash = "1.1.0"